--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -10,17 +10,25 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Install requirements
-        run: sudo apt-get update && sudo apt-get install -yq build-essential git
+        run: |
+          sudo apt update
+          sudo apt install -yq build-essential git cmake
 
       - uses: actions/checkout@v2
       - name: Build project
-        run: make
+        run: |
+          mkdir build
+          cd build
+          cmake -G "Unix Makefiles" -DCMAKE_BUILD_TYPE=Release ..
+          make
 
   linux_tests:
     runs-on: ubuntu-latest
     steps:
       - name: Install requirements
-        run: sudo apt-get update && sudo apt-get install -yq build-essential git
+        run: |
+          sudo apt update
+          sudo apt install -yq build-essential git cmake
 
       - uses: actions/checkout@v2
         with:
@@ -37,7 +45,12 @@ jobs:
 
       - uses: actions/checkout@v2
       - name: Build project and run unit tests
-        run: make test
+        run: |
+          mkdir build
+          cd build
+          cmake -G "Unix Makefiles" -DCMAKE_BUILD_TYPE=Release -DENABLE_UNIT_TESTS=ON ..
+          make
+          make test
 
   windows_build:
     runs-on: windows-latest
@@ -52,8 +65,13 @@ jobs:
           install: >-
             base-devel
             git
+            cmake
             mingw-w64-x86_64-toolchain
 
       - uses: actions/checkout@v2
       - name: Build project
-        run: make
+        run: |
+          mkdir build
+          cd build
+          cmake -G "Unix Makefiles" -DCMAKE_BUILD_TYPE=Release ..
+          make
