Refactor CMakeLists.txt
Require minimum CMake version 3.13 (for target_link_options())
Enable more compiler warnings
Only enable stack protector if available
Add option to force compiling position independent code
Set compiler/linker flags and include directories per target instead of globally

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.10.0)
+cmake_minimum_required(VERSION 3.13.0)
 project(easyconf
     VERSION 1.0.0
     DESCRIPTION "Lightweight C library to manage simple configuration files"
@@ -10,8 +10,6 @@ include(GNUInstallDirs)
 include(CTest)
 
 enable_testing()
-
-include_directories("${CMAKE_CURRENT_SOURCE_DIR}/include")
 
 # Library sources
 set(EASYCONF_SOURCES
@@ -25,24 +23,84 @@ set(EASYCONF_TESTS_SOURCES
     tests/getline_tests.c
     tests/parameter_tests.c)
 
-# easyconf library
-add_library(easyconf ${EASYCONF_SOURCES})
-set_target_properties(easyconf PROPERTIES PUBLIC_HEADER "${CMAKE_CURRENT_SOURCE_DIR}/include/easyconf.h")
+# Compiler flags
+option(EASYCONF_COMPILE_PIC "Compile library with position independent code" OFF)
+set(EASYCONF_INCLUDE_DIRS "")
+set(EASYCONF_C_FLAGS_OPT "")
+set(EASYCONF_C_FLAGS "")
+set(EASYCONF_LINKER_FLAGS "")
+
+list(APPEND EASYCONF_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/include")
+
+check_c_compiler_flag("-pipe" cc_pipe)
+check_c_compiler_flag("-Wcast-qual" cc_wcast_qual)
+check_c_compiler_flag("-Wpointer-arith" cc_wpointer_arith)
+check_c_compiler_flag("-Wwrite-strings" cc_wwrite_strings)
+check_c_compiler_flag("-fstack-protector" cc_stack_protector)
+
+if (cc_pipe)
+    list(APPEND EASYCONF_C_FLAGS "-pipe")
+endif()
+
+list(APPEND EASYCONF_C_FLAGS "-pedantic" "-Wall" "-Wextra" "-Wshadow" "-Wformat-security")
+if (cc_wcast_qual)
+    list(APPEND EASYCONF_C_FLAGS "-Wcast-qual")
+endif()
+if (cc_wpointer_arith)
+    list(APPEND EASYCONF_C_FLAGS "-Wpointer-arith")
+endif()
+if (cc_wwrite_strings)
+    list(APPEND EASYCONF_C_FLAGS "-Wwrite-strings")
+endif()
+if (cc_stack_protector)
+    list(APPEND EASYCONF_C_FLAGS "-fstack-protector-strong" "-Wstack-protector")
+endif()
+
+list(APPEND EASYCONF_C_FLAGS_OPT "-D_FORTIFY_SOURCE=2")
+
+# If no build type was specified we will use the default
+set(default_build_type "Debug")
+if (NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
+    message(STATUS "No build type was specified, defaulting to '${default_build_type}'")
+    set(CMAKE_BUILD_TYPE "${default_build_type}")
+endif()
+
+# Build type flags
+set(CMAKE_C_FLAGS_DEBUG "-O0 -g3")
+set(CMAKE_C_FLAGS_MINSIZEREL "-Os ${EASYCONF_C_FLAGS_OPT}")
+set(CMAKE_C_FLAGS_RELEASE "-O2 ${EASYCONF_C_FLAGS_OPT}")
+set(CMAKE_C_FLAGS_RELWITHDEBINFO "${CMAKE_C_FLAGS_RELEASE} -g")
 
 # easyconf.pc
 set(EASYCONF_SOURCE_PKGCONF "${CMAKE_CURRENT_SOURCE_DIR}/pkgconf/easyconf.pc.in")
 set(EASYCONF_PKGCONF "${CMAKE_CURRENT_BINARY_DIR}/pkgconf/easyconf.pc")
 configure_file(${EASYCONF_SOURCE_PKGCONF} ${EASYCONF_PKGCONF} @ONLY)
 
-# Criterion unit tests
+# Library
+add_library(easyconf ${EASYCONF_SOURCES})
+target_include_directories(easyconf PRIVATE ${EASYCONF_INCLUDE_DIRS})
+target_compile_options(easyconf PRIVATE ${EASYCONF_C_FLAGS})
+target_link_options(easyconf PRIVATE ${EASYCONF_LINKER_FLAGS})
+set_target_properties(easyconf PROPERTIES PUBLIC_HEADER "${CMAKE_CURRENT_SOURCE_DIR}/include/easyconf.h")
+if (EASYCONF_COMPILE_PIC)
+    set_target_properties(easyconf PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
+endif()
+
+# Unit tests
 option(ENABLE_UNIT_TESTS "Enable unit testing with Criterion" OFF)
 if (ENABLE_UNIT_TESTS)
     find_library(CRITERION_FOUND criterion REQUIRED)
     add_executable(easyconf_tests ${EASYCONF_TESTS_SOURCES})
+    target_include_directories(easyconf_tests PRIVATE ${EASYCONF_INCLUDE_DIRS})
+    target_compile_options(easyconf_tests PRIVATE ${EASYCONF_C_FLAGS})
+    target_link_options(easyconf_tests PRIVATE ${EASYCONF_LINKER_FLAGS})
     target_link_libraries(easyconf_tests easyconf criterion)
+    if (EASYCONF_COMPILE_PIC)
+        set_target_properties(easyconf_tests PROPERTIES POSITION_INDEPENDENT_CODE TRUE)
+    endif()
 
     add_test(NAME easyconf_unit_tests
-             COMMAND ${CMAKE_CURRENT_BINARY_DIR}/easyconf_tests
+             COMMAND easyconf_tests
              WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
 endif()
 
@@ -54,35 +112,16 @@ install(TARGETS easyconf
 install(FILES ${EASYCONF_PKGCONF}
         DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig)
 
-# Compiler flags
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Wshadow -Wformat-security")
-
-check_c_compiler_flag("-pipe" cc_pipe)
-if (cc_pipe)
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -pipe")
-endif()
-
-# If no build type was specified we will use the default
-set(default_build_type "Debug")
-if (NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
-    message(STATUS "No build type was specified, defaulting to '${default_build_type}'")
-    set(CMAKE_BUILD_TYPE "${default_build_type}")
-endif()
-
-# Build type flags
-set(CMAKE_C_FLAGS_DEBUG "-O0 -g3")
-set(CMAKE_C_FLAGS_MINSIZEREL "-Os")
-set(CMAKE_C_FLAGS_RELWITHDEBINFO "-O2 -g")
-set(CMAKE_C_FLAGS_RELEASE "-O2")
-set(CMAKE_C_FLAGS_NATIVERELEASE "-O2 -march=native")
-set(CMAKE_C_FLAGS_HARDENED "-O2 -g -fstack-protector-strong -D_FORTIFY_SOURCE=2")
-
 # Format and display the compiler and linker flags
 string(TOUPPER "${CMAKE_BUILD_TYPE}" CMAKE_BUILD_TYPE_UPPER)
-string(STRIP "${CMAKE_C_FLAGS} ${CMAKE_C_FLAGS_${CMAKE_BUILD_TYPE_UPPER}}" EASYCONF_COMPILER_FLAGS)
-string(STRIP "${CMAKE_EXE_LINKER_FLAGS} ${CMAKE_EXE_LINKER_FLAGS_${CMAKE_BUILD_TYPE_UPPER}}" EASYCONF_LINKER_FLAGS)
-message(STATUS "Compiler flags: ${EASYCONF_COMPILER_FLAGS}")
-message(STATUS "Linker flags: ${EASYCONF_LINKER_FLAGS}")
+message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
+message(STATUS "Compile PIC: ${EASYCONF_COMPILE_PIC}")
+message(STATUS "C flags: ${CMAKE_C_FLAGS}")
+message(STATUS "C flags (build type): ${CMAKE_C_FLAGS_${CMAKE_BUILD_TYPE_UPPER}}")
+message(STATUS "C flags (easyconf): ${EASYCONF_C_FLAGS}")
+message(STATUS "Linker flags: ${CMAKE_EXE_LINKER_FLAGS}")
+message(STATUS "Linker flags (build type): ${CMAKE_EXE_LINKER_FLAGS_${CMAKE_BUILD_TYPE_UPPER}}")
+message(STATUS "Linker flags (easyconf): ${EASYCONF_LINKER_FLAGS}")
 
 # CPack variables must be set before including it
 include(CPack)
