--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -1,4 +1,4 @@
-name: Build and run unit tests
+name: build
 on:
   push:
     branches: [ '**' ]
@@ -6,72 +6,77 @@ on:
     branches: [ '**' ]
 
 jobs:
-  linux_build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Install requirements
-        run: |
-          sudo apt update
-          sudo apt install -yq build-essential git cmake
+  build:
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - { os: ubuntu-latest,    shell: 'bash'                                           }
+          - { os: windows-latest,   shell: 'msys2 {0}', msys_sys: mingw64, msys_env: x86_64 }
+          - { os: windows-latest,   shell: 'msys2 {0}', msys_sys: mingw32, msys_env: i686   }
 
-      - uses: actions/checkout@v2
-      - name: Build project
-        run: |
-          mkdir build
-          cd build
-          cmake -G "Unix Makefiles" -DCMAKE_BUILD_TYPE=Release ..
-          make
+    runs-on: ${{ matrix.os }}
 
-  linux_tests:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Install requirements
-        run: |
-          sudo apt update
-          sudo apt install -yq build-essential git cmake
-
-      - uses: actions/checkout@v2
-        with:
-          repository: Snaipe/Criterion
-          ref: v2.3.3
-
-      - name: Build and install Criterion
-        run: |
-          mkdir build
-          cd build
-          cmake -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_BUILD_TYPE=Release ..
-          make
-          sudo make install
-
-      - uses: actions/checkout@v2
-      - name: Build project and run unit tests
-        run: |
-          mkdir build
-          cd build
-          cmake -G "Unix Makefiles" -DCMAKE_BUILD_TYPE=Release -DENABLE_UNIT_TESTS=ON ..
-          make
-          make test
-
-  windows_build:
-    runs-on: windows-latest
     defaults:
       run:
-        shell: msys2 {0}
+        shell: ${{ matrix.shell }}
 
     steps:
-      - uses: msys2/setup-msys2@v2
+      - name: Install requirements (linux)
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          sudo apt-get update
+          sudo apt-get install -yq ninja-build git gcc pkg-config cmake libcriterion-dev
+
+      - name: Install requirements (windows)
+        if: matrix.os == 'windows-latest'
+        uses: msys2/setup-msys2@v2
         with:
+          msystem: ${{ matrix.msys_sys }}
           update: true
+          release: true
           install: >-
             base-devel
             git
-            cmake
-            mingw-w64-x86_64-toolchain
+            mingw-w64-${{ matrix.msys_env }}-toolchain
+            mingw-w64-${{ matrix.msys_env }}-pkgconf
+            mingw-w64-${{ matrix.msys_env }}-libwinpthread
+            mingw-w64-${{ matrix.msys_env }}-ninja
+            mingw-w64-${{ matrix.msys_env }}-cmake
+            mingw-w64-${{ matrix.msys_env }}-meson
+            mingw-w64-${{ matrix.msys_env }}-libffi
+            mingw-w64-${{ matrix.msys_env }}-libgit2
 
-      - uses: actions/checkout@v2
+      - name: Clone main repository
+        uses: actions/checkout@v3
+        with:
+          submodules: false
+          path: easyconf
+
+      - name: Clone Snaipe/Criterion repository (windows)
+        if: matrix.os == 'windows-latest'
+        uses: actions/checkout@v3
+        with:
+          repository: Snaipe/Criterion
+          ref: v2.4.2
+          submodules: recursive
+          path: Criterion
+
+      - name: Build and install Criterion (windows)
+        if: matrix.os == 'windows-latest'
+        run: |
+          cd "${GITHUB_WORKSPACE}/Criterion"
+          export BUILDDIR="build-${{ matrix.msys_sys }}"
+          meson --prefix=/${{ matrix.msys_sys }} "${BUILDDIR}"
+          ninja -C "${BUILDDIR}"
+          ninja -C "${BUILDDIR}" install
+
       - name: Build project
         run: |
-          mkdir build
-          cd build
-          cmake -G "Unix Makefiles" -DCMAKE_BUILD_TYPE=Release ..
-          make
+          cd "${GITHUB_WORKSPACE}/easyconf"
+          cmake -S . -B build -DCMAKE_BUILD_TYPE=Release -DCMAKE_C_FLAGS="-Werror" -DENABLE_UNIT_TESTS=ON
+          cmake --build build
+
+      - name: Run tests
+        run: |
+          ctest --output-on-failure --test-dir "${GITHUB_WORKSPACE}/easyconf/build"
